--- a/src/assets/scss/components/search.scss
+++ b/src/assets/scss/components/search.scss
@@ -18,7 +18,7 @@
     }
 
     .eos-icons {
-      padding: 0px;
+      padding: 7px 0px 0px 0px;
     }
   }
 
